--- a/src/assets/CSS/general.css
+++ b/src/assets/CSS/general.css
@@ -69,10 +69,11 @@ html {
 }
 
 body {
-  font-family: "Rubik", sans-serif;
+  font-family: "Roboto", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
+  font-size: 2rem;
 }
 
 /* Utility Classes */
@@ -82,6 +83,17 @@ body {
 /* BUTTONS */
 
 /* LINKS */
+
+.header-link:link,
+.header-link:visited {
+  text-decoration: none;
+  transition: all 0.3s;
+  cursor: pointer;
+  font-family: inherit;
+  color: #363535;
+  font-size: 2.4rem;
+  font-weight: 500;
+}
 
 /* LISTS */
 
