--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -1,15 +1,50 @@
-/* HEADER COMPONENTS */
-
 /* Header */
 
-/* Navigation */
+.header {
+  justify-content: space-between;
+  background-color: #ecf4f5;
+  height: 9.6rem;
+  padding: 0 4.8rem;
+  position: relative;
+}
 
-/* Sticky navigation */
+.header-nav,
+.header-contact-container {
+  height: inherit;
+  padding: 1rem;
+}
+
+.header-logo-img {
+  height: 7rem;
+}
+
+.header-nav {
+  gap: 2rem;
+}
+
+.header-link--home {
+  margin-right: 5rem;
+}
+
+.header-adress {
+  text-align: right;
+}
 
 /* MAIN COMPONENTS */
 
 /* Hero Section */
 
+.section-hero {
+  padding: 4.8rem 0 9.6rem 0;
+}
+
+.hero {
+}
+
 /* cta section */
 
 /* Footer */
+
+/* Navigation */
+
+/* Sticky navigation */
