--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -2,7 +2,6 @@
 
 .header {
   justify-content: space-between;
-  background-color: #fff;
   height: 14.8rem;
   padding: 4.8rem;
   position: relative;
@@ -28,15 +27,19 @@
   margin-right: 5rem;
 }
 
-.header-adress {
-  text-align: right;
-  row-gap: 1rem !important;
+.header-address {
+  row-gap: 0.5rem !important;
+}
+
+.header-address-box {
+  gap: 1rem;
+  margin-left: auto;
 }
 
 .header-icon {
   display: inline-block;
   color: #1f8f91;
-  font-size: 4.5rem;
+  font-size: 4.4rem;
 }
 
 /* MAIN COMPONENTS */
@@ -54,7 +57,7 @@
 
 .hero-img {
   width: 100%;
-  border-radius: 10px;
+  border-radius: 6px;
 }
 
 .hero-text-box {
