--- a/src/assets/CSS/general.css
+++ b/src/assets/CSS/general.css
@@ -192,3 +192,9 @@ body {
 .shadow--dark {
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
 }
+
+/* PADDINGS */
+
+.padding-bot-lg1 {
+  padding-bottom: 6rem;
+}
