--- a/src/assets/CSS/general.css
+++ b/src/assets/CSS/general.css
@@ -79,12 +79,21 @@ body {
 
 /* HEADINGS */
 
-.heading-primary {
+.heading-primary,
+.heading-secondary {
   font-weight: 700;
   color: #333;
-  font-size: 7.4rem;
   line-height: 1.2;
+}
+
+.heading-primary {
+  font-size: 7.4rem;
   margin-bottom: 3.2rem;
+}
+
+.heading-secondary {
+  font-size: 4.4rem;
+  margin-bottom: 1.6rem;
 }
 
 /* BUTTONS */
@@ -186,11 +195,23 @@ body {
 /* SHADOWS */
 
 .shadow {
-  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.1);
 }
 
 .shadow--dark {
-  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.12);
+}
+
+.shadow--dark--strong {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.25);
+}
+
+.shadow--animated {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.1);
+}
+
+.shadow--animated:hover {
+  box-shadow: 0 4.8.4rem 6.4rem rgba(0, 0, 0, 0.075);
 }
 
 /* PADDINGS */
