--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -171,6 +171,11 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 .gallery-btn-left {
