--- a/src/assets/CSS/general.css
+++ b/src/assets/CSS/general.css
@@ -219,3 +219,28 @@ body {
 .padding-bot-lg1 {
   padding-bottom: 6rem;
 }
+
+.padding--section {
+  padding: 4.8rem 0 9.6rem 0;
+}
+
+/* Animation */
+
+.shade {
+  animation-name: shade;
+  animation-duration: 0.2s;
+}
+
+@keyframes shade {
+  from {
+    opacity: 0.1;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/*Prevent ion icon default tooltips popping */
+ion-icon {
+  pointer-events: none;
+}
