--- a/src/assets/CSS/queries.css
+++ b/src/assets/CSS/queries.css
@@ -9,6 +9,10 @@
 
 /* Below 1344px (smaller computers) */
 @media (max-width: 84em) {
+  .header-logo-img {
+    height: 10.5rem;
+  }
+
   .header {
     height: 16.8rem;
     font-size: 2.4rem;
