--- a/src/assets/CSS/general.css
+++ b/src/assets/CSS/general.css
@@ -204,6 +204,10 @@ body {
 
 /* PADDINGS/MARGINS */
 
+.margin-bot--sm {
+  margin-bottom: 1.5rem;
+}
+
 /* SHADOWS */
 
 .shadow {
@@ -232,8 +236,12 @@ body {
   padding-bottom: 6rem;
 }
 
-.padding--section {
+.padding--section-sm {
   padding: 4.8rem 0 9.6rem 0;
+}
+
+.padding--section {
+  padding: 4.8rem 0 2.4rem 0;
 }
 
 /* Animation */
