--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -271,12 +271,10 @@
 .testimonial-img {
   border-radius: 50%;
   height: 14rem;
-  margin-bottom: 1.5rem;
 }
 
 .testimonial-text {
   font-size: 2rem;
-  margin-bottom: 1.5rem;
   line-height: 1.6;
 }
 
@@ -293,21 +291,49 @@
 
 .grid--team {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   row-gap: 5rem;
 }
 
+.grid--team-row {
+  display: grid;
+}
+
+.grid--team-row-padded {
+  padding: 0 15rem;
+}
+
 .team-member-box {
-  max-width: 40rem;
-  max-height: 36rem;
-  padding: 2rem 1rem;
+  min-width: 31rem;
+  min-height: 36rem;
+  padding: 2rem 2rem;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
 }
 
 .team-member-img {
   display: block;
   border-radius: 50%;
-  height: 14rem;
+  height: 22rem;
+  margin: 0 auto;
+}
+
+.team-member-name {
+  text-transform: uppercase;
+  color: #222;
+  font-size: 2.4rem;
+  font-weight: 700;
+  text-align: center;
+}
+
+.team-member-title {
+  text-transform: uppercase;
+  color: var(--shade-20);
+  font-size: 1.6rem;
+  font-weight: 600;
 }
 
 /* cta section */
