--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -2,7 +2,7 @@
 
 .header {
   justify-content: space-between;
-  height: 14.8rem;
+  height: 16rem;
   padding: 4.8rem;
   position: relative;
   font-size: 3rem;
@@ -11,7 +11,7 @@
 }
 
 .header-background {
-  height: 14.8rem;
+  height: 16rem;
   width: 100vw;
   z-index: -1;
   position: absolute;
@@ -308,8 +308,6 @@
   min-height: 36rem;
   padding: 2rem 2rem;
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   gap: 2rem;
 }
@@ -338,7 +336,99 @@
 
 /* cta section */
 
+.cta-box {
+  background-color: var(--tint-20);
+  color: var(--shade-80);
+  padding: 3.6rem 4.8rem;
+  border-radius: 6px;
+  gap: 2rem;
+  max-width: 100rem;
+}
+
+.cta-text-box {
+  text-align: center;
+}
+
+.cta-headline {
+  font-size: 4.4rem;
+  font-weight: 700;
+}
+
+.cta-description {
+  margin: 0 auto;
+  max-width: 60rem;
+}
+
+.cta-form input::placeholder {
+  color: #aaa;
+}
+
+.form-element {
+  display: grid;
+  max-width: 30rem;
+}
+
+.form-element label {
+  font-weight: 700;
+  padding-bottom: 2rem;
+}
+
+.form-element input {
+  padding: 1.2rem;
+  font-size: 1.8rem;
+  border: none;
+  background-color: var(--tint-90);
+  border-radius: 9px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.btn--form-box {
+  grid-column: 1/4;
+  display: flex;
+}
+
+.btn--form {
+  margin: 0 auto;
+  border: none;
+  padding: 4rem 8rem;
+  background-color: var(--secondary-shade-20);
+  color: #fff;
+  border-radius: 9px;
+  font-size: 3rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.btn--form:hover,
+.btn--form:active {
+  background-color: var(--secondary-shade-30);
+}
+
 /* Footer */
+
+.footer {
+  padding: 12rem 0 6rem 0;
+  background-color: var(--tint-90);
+}
+
+.footer-content {
+  max-width: 150rem;
+}
+
+.footer-logo-box {
+  height: 12rem;
+}
+
+.footer-link--home {
+  height: inherit;
+}
+
+.footer-copyright-box {
+  text-align: center;
+}
+
+.copyright {
+  font-size: 1.4rem;
+}
 
 /* Navigation */
 
