--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -159,7 +159,9 @@
 .hero-description {
   font-size: 2.4rem;
   line-height: 1.5;
+  margin: 0 auto;
   margin-bottom: 4.8rem;
+  max-width: 55rem;
 }
 
 .hero-cta-btn:link,
