--- a/src/assets/CSS/translation.css
+++ b/src/assets/CSS/translation.css
@@ -10,3 +10,28 @@
 .heading-primary.language--ru {
   font-size: 6.2rem;
 }
+
+.hero-cta-btn.language--ru {
+  width: 40rem;
+  padding: 2rem 4rem;
+}
+
+.service p.language--ru {
+  font-size: 2.4rem;
+}
+
+/* Armenian */
+
+/* hero */
+
+.heading-primary.language--arm {
+  font-size: 6.4rem;
+}
+
+.header-address-text .language--arm {
+  font-size: 2.4rem;
+}
+
+.hero-cta-btn.language--arm {
+  width: 40rem;
+}
