--- a/src/assets/CSS/queries.css
+++ b/src/assets/CSS/queries.css
@@ -101,3 +101,31 @@
     font-size: 56.25%;
   }
 }
+
+/* Below 1024 (Medium Tablets) */
+@media (max-width: 64em) {
+  html {
+    /*56.25% -> 1rem = 9px*/
+    font-size: 56.25%;
+  }
+
+  .header-nav {
+    font-size: 2rem;
+    gap: 0.2rem;
+  }
+
+  .lang-select-dropdown-btn {
+    font-size: 2rem;
+  }
+
+  .header-address-text {
+    font-size: 1.4rem;
+  }
+}
+
+/* Below 976px (Tablets) */
+@media (max-width: 61em) {
+  .header-link:not(:first-child) {
+    display: none;
+  }
+}
