--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -54,24 +54,21 @@
 
 .lang-select-dropdown {
   position: relative;
-  display: inline-block;
 }
 
 .lang-select-dropdown-content {
-  display: none;
   position: absolute;
   background-color: var(--tint-90);
-  min-width: 20.5rem;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
 .lang-select-dropdown-content a {
-  display: block;
+  text-align: left;
   color: #111;
   padding: 1.2rem 1.6rem;
   text-decoration: none;
-  font-size: 2.6rem;
+  font-size: inherit;
 }
 
 .lang-select-dropdown-content a:hover {
@@ -86,13 +83,19 @@
   background-color: var(--tint-60);
 }
 
+/* TODO set them to one line */
+
 .lang-select {
   gap: 1.4rem;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: left;
 }
 
-.lang-select--arm {
-  font-size: 3rem !important;
+.lang-select a,
+.lang-select p {
+  display: inline;
 }
 
 .flag-img {
