--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -233,7 +233,7 @@
   padding: 0 1rem 0 0;
 }
 
-.services--accomodation {
+.services--list {
   padding-left: 1rem;
   align-items: left;
 }
@@ -379,22 +379,34 @@
 
 .grid--team {
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(12, 1fr);
   row-gap: 5rem;
+  justify-content: center;
+  align-items: center;
 }
 
-.grid--team-row {
-  display: grid;
+.team-member-box {
+  grid-column: span 3;
 }
 
-.grid--team-row-padded {
-  padding: 0 15rem;
+.team-member-box:nth-child(2),
+.team-member-box:nth-child(9) {
+  grid-column: 5 / span 4;
+}
+
+.team-member-box:nth-child(1),
+.team-member-box:nth-child(8) {
+  grid-column: 3 / span 2;
+}
+
+.team-member-box:nth-child(3),
+.team-member-box:nth-child(10) {
+  grid-column: 9 / span 2;
 }
 
 .team-member-box {
   min-width: 31rem;
   min-height: 36rem;
-  padding: 2rem 2rem;
   margin: 0 auto;
   align-items: center;
   gap: 2rem;
