--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -28,7 +28,8 @@
   padding-right: 4rem;
 }
 
-.header-logo-img {
+.header-logo-img,
+.footer-logo-img {
   height: 12rem;
 }
 
@@ -250,10 +251,10 @@
 
 /* Gallery */
 
-.gallery,
-.gallery-nav {
+.gallery--container {
   padding: 9rem 3.2rem;
   max-width: 90rem;
+  margin: 0 auto;
 }
 
 .gallery-btn {
@@ -485,7 +486,7 @@
 }
 
 .btn--form-box {
-  grid-column: 1/4;
+  grid-column: span 3;
   display: flex;
 }
 
@@ -523,7 +524,7 @@
 }
 
 .footer-logo-box {
-  margin: 0 auto;
+  margin: auto auto;
   height: 13rem;
 }
 
