--- a/src/assets/CSS/queries.css
+++ b/src/assets/CSS/queries.css
@@ -364,6 +364,11 @@
 
   .testimonials {
     grid-template-columns: 1fr;
+    row-gap: 0;
+  }
+
+  .testimonial-img {
+    height: 10rem;
   }
 
   .grid--team {
