--- a/src/assets/CSS/queries.css
+++ b/src/assets/CSS/queries.css
@@ -167,6 +167,7 @@
     pointer-events: auto !important;
     visibility: visible !important;
     z-index: 10 !important;
+    display: flex !important;
   }
 
   .main-nav {
@@ -178,12 +179,11 @@
     height: 100vh;
     backdrop-filter: blur(7px);
     -webkit-backdrop-filter: blur(7px);
-    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     transform: translateX(100%);
-    visibility: hidden;
+    display: none;
     opacity: 0;
     pointer-events: none;
     transition: transform 0.3s ease-in;
