--- a/src/assets/CSS/general.css
+++ b/src/assets/CSS/general.css
@@ -138,11 +138,11 @@ body {
   border: none;
   background: none;
   cursor: pointer;
-  display: none;
   z-index: 9999;
   text-align: right;
   width: 40px;
   margin-left: auto;
+  display: none;
 }
 
 .icon-mobile-nav {
@@ -304,3 +304,24 @@ body {
 ion-icon {
   pointer-events: none;
 }
+
+/* TEST FLOAT */
+
+.sticky {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+}
+
+.floating {
+  width: 100px;
+  height: 100px;
+  background-color: #2753b3;
+  position: absolute;
+  float: right;
+  z-index: 999;
+  top: 2rem;
+  right: 2rem;
+}
+
+/* TEST FLOAT */
