--- a/src/assets/CSS/queries.css
+++ b/src/assets/CSS/queries.css
@@ -13,7 +13,7 @@
     max-width: 26rem;
   }
 
-  .header-nav {
+  .main-nav {
     font-size: 2.4rem;
     gap: 0.6rem;
   }
@@ -29,6 +29,12 @@
   .header-contact {
     padding-right: 0;
   }
+
+  /* Russian */
+
+  .heading-primary.language--ru {
+    font-size: 5.2rem !important;
+  }
 }
 
 /* Below 1344px (smaller computers) */
@@ -37,6 +43,18 @@
     height: 16.8rem;
     font-size: 2.4rem;
   }
+
+  /* Russian */
+
+  .header p.language--ru {
+    font-size: 1.8rem !important;
+  }
+
+  .service p.language--ru {
+    font-size: 2.1rem !important;
+  }
+
+  /* Russian */
 
   .header-nav {
     gap: 0.5rem;
@@ -102,10 +120,22 @@
 
 /* Below 1248px (smaller computers) */
 @media (max-width: 78em) {
-  .header-nav {
+  .main-nav {
     font-size: 2.2rem;
-    gap: 0.3rem;
+    gap: 0.2rem;
   }
+
+  /* Russian */
+
+  .header p.language--ru {
+    font-size: 1.8rem !important;
+  }
+
+  .service p.language--ru {
+    font-size: 2.2rem !important;
+  }
+
+  /* Russian */
 
   .lang-select-dropdown-btn {
     font-size: 2.2rem;
@@ -143,6 +173,15 @@
   html {
     /*56.25% -> 1rem = 9px*/
     font-size: 56.25%;
+  }
+
+  .main-nav {
+    font-size: 2.2rem;
+    gap: 0.1rem;
+  }
+
+  .header-address-text p.language--ru {
+    font-size: 1.4rem !important;
   }
 
   .header-nav {
@@ -236,6 +275,21 @@
 
 /* Below 848px (Small Tablets) */
 @media (max-width: 53em) {
+  /* Russian */
+
+  .heading-primary.language--ru {
+    font-size: 4.4rem !important;
+  }
+
+  .hero-description.language--ru {
+    font-size: 1.6rem;
+  }
+
+  .hero-cta-btn.language--ru {
+    font-size: 2.2rem;
+    width: 70vw !important;
+  }
+
   .section-cooperations {
     padding-bottom: 4.8rem;
   }
@@ -312,6 +366,12 @@
 @media (max-width: 43em) {
   .header {
     padding: 4.8rem 1rem 4.8rem 1rem;
+  }
+
+  /* Russian */
+
+  .testimonial-text.language--ru {
+    font-size: 1.6rem !important;
   }
 
   .header-link--home {
@@ -391,7 +451,6 @@
 
   .testimonials {
     grid-template-columns: 1fr;
-    row-gap: 0;
   }
 
   .testimonial-img {
@@ -449,6 +508,22 @@
     font-size: 1.6rem;
   }
 
+  /* Russian */
+
+  .btn--form p.language--ru {
+    font-size: 2.2rem !important;
+  }
+
+  .btn--form {
+    padding: 4rem 5rem;
+  }
+
+  .social-media-box p.language--ru {
+    font-size: 1.8rem;
+  }
+
+  /* Russian */
+
   .footer-logo-img {
     height: 8rem;
   }
@@ -479,6 +554,14 @@
 
 /* Below 416px (Phones) */
 @media (max-width: 26em) {
+  .heading-primary.language--ru {
+    font-size: 3.6rem !important;
+  }
+
+  .hero-description.language--ru {
+    font-size: 1.4rem;
+  }
+
   .heading-primary {
     font-size: 4.6rem;
   }
@@ -501,6 +584,19 @@
   .services-box {
     min-width: 30rem;
   }
+
+  /* RUSSIAN */
+
+  .services-box-header.language--ru {
+    font-size: 2.4rem;
+    font-weight: 600;
+  }
+
+  .service p.language--ru {
+    font-size: 1.9rem !important;
+  }
+
+  /* RUSSIAN */
 
   .services {
     padding: 0 1rem;
