--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -86,6 +86,7 @@
 
 .main-nav {
   display: flex;
+  z-index: 9999;
 }
 
 .lang-select {
@@ -578,9 +579,15 @@
   color: var(--secondary-shade-30);
 }
 
-/* Navigation */
+/* Sticky Navigation */
 
-/* Sticky navigation */
+.btn-mobile-nav {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
 
 /*
 position:fixed
